--- a/modulo-01/seletores.html
+++ b/modulo-01/seletores.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     
+    <h1>Agrupamento</h1>
+    <h2>Aprendendo css</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde fugiat ipsa, ad qui earum, culpa mollitia quae quia blanditiis laudantium omnis laboriosam nobis reprehenderit molestias, eveniet ea quos accusamus numquam!</p>
+    <!--
     <h1>Texto h1</h1>
     <p>Paragrafo</p>
 
@@ -19,6 +23,7 @@
         <input type="email" name="email"><br> 
         <input type="submit" value="Enviar">
     </form>
+    -->
 
 </body>
 </html>
