--- a/modulo-01/margin-padding.html
+++ b/modulo-01/margin-padding.html
@@ -9,13 +9,9 @@
 </head>
 <body>
     
-    <div id="exemplo">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis odio quaerat nihil iste dolorum. Culpa maxime facere soluta quod tenetur tempore commodi possimus deserunt, laborum est nisi modi quos quibusdam.
-    </div>
-
-    <div id="exemplo2">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis odio quaerat nihil iste dolorum. Culpa maxime facere soluta quod tenetur tempore commodi possimus deserunt, laborum est nisi modi quos quibusdam.
-    </div>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ab qui fuga id aliquid dicta molestias nemo architecto, eveniet quod animi similique doloribus aspernatur eaque earum consequatur atque deserunt vero.</p>
+    <h1>Esquerda</h1>
+    <h2>Direita</h2>
+    <h3>Centro</h3>
 </body>
 </html>
