--- a/modulo-01/box-sizing-box-shadow.html
+++ b/modulo-01/box-sizing-box-shadow.html
@@ -10,7 +10,7 @@
 <body>
     
     <div id="conteudo">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore alias non accusamus officia dolore esse consequuntur, eligendi qui reprehenderit quis assumenda eaque iusto laudantium facere nam mollitia quia facilis saepe?
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore alias non accusamus officia dolore esse consequuntur, eligendi qui reprehenderit quis assumenda eaque iusto laudantium facere nam mollitia quia facilis saepe?</p>
     </div>
 
 </body>
