--- a/modulo-01/colors-gradients.html
+++ b/modulo-01/colors-gradients.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fonts</title>
+    <title>Colors e Gradients</title>
 </head>
 <body>
     
-    <p>Fonts</p>
+    <div id="cores">
+
+    </div>
 
 </body>
 </html>
